style.css
@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300&family=M+PLUS+Rounded+1c&display=swap');

html, body {
    background-color: #101010;
    color: #f6fffd;
    font: 1.2em / 1.2 "M PLUS Rounded 1c", sans-serif;
    height: 100%;
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

li {
   margin: 1rem 0
}

a {
    color: #0e9bb1;
    text-decoration: none;
    background-color: transparent;
}

a:hover {
    text-decoration: underline;
    color: #5b097b;
}

nav a {
    color: #f6fffd;
    text-decoration: none;
}

nav a:hover {
    color: #a0a8a6;
    text-decoration: none;
}

main {
    margin: 0 auto;
    max-width: 75rem;
    align-content: center;
}

footer {
    color: #a4abaa;
    font-size: 0.75em;
    padding-top: 60px;
    padding-bottom: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
}

footer a {
    color: #a4abaa;
}

.wrapper {
    box-sizing: border-box;
    min-height: 100%;
    display: flex;
    flex-direction: column;
}

.page-header, .page-footer {
    flex-grow: 0;
    flex-shrink: 0;
    background-color: #171717;
    filter: drop-shadow(0 0 0.75rem black);
}

.page-body {
    flex-grow: 1;
}

.top-nav-main {
    align-items: center;
    display: flex;
    flex-direction: row;
    position: static;
}

.main-nav {
    align-items: center;
    display: flex;
}

.nav-item {
    margin: 6px 10px;
}

.main-menu {
    display: flex;
    flex-direction: row;
    list-style: none;
}

.card-container {
    margin: 2rem 0;
    padding: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: row;
    flex-wrap: wrap;
}

.card {
    width: 24rem;
    height: 8rem;
    margin: .5rem;
    background-color: #303030;
    border-radius: 2rem;
    list-style: none;
    filter: drop-shadow(0 0 0.75rem black);
}

.card:hover {
    background-color: #404040;
}

.card-link {
    position: absolute;
    margin: auto 1rem;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    display: block flex;
    flex-direction: row;
    flex-wrap: nowrap;
    color: #f6fffd;
    text-decoration: none;
}

.card-link:hover {
    color: #ffffff;
    text-decoration: none;
}

.card-detail {
    margin: 1rem;
    display: flex;
    justify-content: center;
    align-content: center;
    flex-direction: column;
}

.card-icon {
    display: flex;
    margin: auto 0.1rem;
    padding: 2rem;
    background-size: 4rem;
    background-repeat: no-repeat;
    border-radius: 1rem;
    justify-content: center;
    align-content: center;
}

.card h1 {
    font-size: 1.5rem;
    margin: .5rem 0;
}

.card p {
    font-size: .75rem;
    margin: .5rem 0;
}

